fix(build): fix release scripts

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build:prod:aot": "npm run build:prod -- --aot",
     "build:ci": "npm run build:prod && npm run build:prod:aot && npm run build:release",
     "build:ghpages": "npm run build:prod:aot -- --base-href \"https://akveo.github.io/ng2-smart-table/\" && ngh",
-    "build:release": "gulp build:release",
+    "build:release": "npm run clean:dist && gulp build:release",
     "test": "ng test",
     "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
     "lint": "ng lint",
@@ -47,6 +47,7 @@
     "@angular/platform-server": "6.0.2",
     "@angular/router": "6.0.2",
     "core-js": "2.5.6",
+    "gulp-rename": "^1.3.0",
     "highlight.js": "9.12.0",
     "lodash": "4.17.10",
     "ng2-completer": "1.6.3",
