fix: move ng2-completer to peerDependencies

--- a/src/ng2-smart-table/package.json
+++ b/src/ng2-smart-table/package.json
@@ -24,10 +24,10 @@
     "akveo"
   ],
   "dependencies": {
-    "lodash": "^4.17.10",
-    "ng2-completer": "^1.6.3"
+    "lodash": "^4.17.10"
   },
   "peerDependencies": {
+    "ng2-completer": "^2.0.8",
     "@angular/common": "^6.0.1",
     "@angular/core": "^6.0.1",
     "@angular/forms": "^6.0.1"
